--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "multer": "^0.1.8",
     "path": "^0.11.14",
     "underscore": "^1.8.2",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "ghost": "0.5.2"
   },
   "license": "MIT"
 }
