--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "util": "^0.10.3",
     "ghost": "0.5.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": "0.10.x"
+  }
 }
