--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "cookie-parser": "^1.3.4",
     "ejs": "^2.3.1",
     "express": "^4.11.2",
+    "express-static-cache": "0.0.6",
     "formidable": "^1.0.17",
     "fs-extra": "^0.16.5",
+    "ghost": "0.5.2",
     "http": "0.0.0",
     "jsonwebtoken": "^4.2.1",
     "method-override": "^2.3.1",
@@ -35,9 +37,9 @@
     "morgan": "^1.5.1",
     "multer": "^0.1.8",
     "path": "^0.11.14",
+    "serve-favicon": "^2.2.0",
     "underscore": "^1.8.2",
-    "util": "^0.10.3",
-    "ghost": "0.5.2"
+    "util": "^0.10.3"
   },
   "license": "MIT",
   "engines": {
