--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "morgan": "^1.5.1",
     "multer": "^0.1.8",
     "path": "^0.11.14",
+    "prerender-node": "^1.2.1",
     "serve-favicon": "^2.2.0",
     "underscore": "^1.8.2",
     "util": "^0.10.3"
