--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "mongoose": "^3.8.23",
     "morgan": "^1.5.1",
     "multer": "^0.1.8",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^1.0.0",
     "path": "^0.11.14",
     "prerender-node": "^1.2.1",
     "serve-favicon": "^2.2.0",
