--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt": "^0.4.5",
     "grunt-bower": "^0.17.0",
     "grunt-browser-sync": "^2.0.0",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.3",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.8.0",
