--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "method-override": "^2.3.1",
     "mongodb": "^1.4.34",
     "mongoose": "^3.8.23",
+    "mongoose-validator": "^1.2.0",
     "morgan": "^1.5.1",
     "multer": "^0.1.8",
     "passport": "^0.2.1",
@@ -55,6 +56,7 @@
     "prerender-node": "^1.2.1",
     "protractor": "^2.0.0",
     "serve-favicon": "^2.2.0",
+    "stripe": "^3.3.4",
     "underscore": "^1.8.2",
     "util": "^0.10.3"
   },
